--- a/MusicTaggingLight/MainWindow.xaml
+++ b/MusicTaggingLight/MainWindow.xaml
@@ -29,6 +29,18 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+        <Style x:Key="Body_Content_DataGrid_Centering"
+        TargetType="{x:Type DataGridCell}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type DataGridCell}">
+                        <Grid Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center" />
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
     <Window.InputBindings>
         <KeyBinding Command="{Binding SaveCommand}"
@@ -44,7 +56,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="57" />
             <RowDefinition />
-            <RowDefinition Height="93" />
+            <RowDefinition Height="53" />
             <RowDefinition Height="23" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
@@ -75,11 +87,11 @@
                      Background="White"
                      Text="{Binding RootPath, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
                      HorizontalAlignment="Stretch"
-                     Margin="10,28,80,0"
+                     Margin="10,28,160,0"
                      Height="22" />
             <Button VerticalAlignment="Center"
                     HorizontalAlignment="Right"
-                    Width="65"
+                    Width="145"
                     Command="{Binding SelectRootFolderCommand}"
                     Height="22"
                     Margin="0,28,10,7">
@@ -131,6 +143,9 @@
                       DragDrop.Drop="dgrFileTags_Drop"
                       SelectionMode="Extended"
                       SelectionUnit="FullRow"
+                      RowHeight="32"
+                      CellStyle="{StaticResource Body_Content_DataGrid_Centering}"
+                      VerticalContentAlignment="Center"
                       Selector.SelectionChanged="SelectionChanged"
                       CanUserAddRows="False"
                       CanUserDeleteRows="False"
@@ -140,7 +155,7 @@
                       ItemsSource="{Binding MusicFileTags}"
                       Margin="0,0,5,0" 
                       RowBackground="{DynamicResource {x:Static SystemColors.ControlLightLightBrushKey}}" 
-                      GridLinesVisibility="Horizontal" ColumnReordered="dgrFileTags_ColumnReordered" />
+                      GridLinesVisibility="Horizontal" ColumnReordered="dgrFileTags_ColumnReordered" FontSize="14" />
             <ScrollViewer Grid.Column="1"
                           VerticalScrollBarVisibility="Auto"
                           HorizontalScrollBarVisibility="Disabled">
@@ -148,7 +163,7 @@
             </ScrollViewer>
         </Grid>
         <Grid Grid.Row="2"
-              VerticalAlignment="Top">
+              VerticalAlignment="Top" Margin="0,0,0,0" Height="53">
             <Separator HorizontalAlignment="Left"
                        Height="5"
                        Width="10"
@@ -219,7 +234,7 @@
             <Button Command="{Binding OpenAboutCommand}"
                     VerticalAlignment="Top"
                     HorizontalAlignment="Left"
-                    Margin="10,50,0,0"
+                    Margin="384,20,0,0"
                     Width="117"
                     Height="23">
                 <StackPanel Orientation="Horizontal">
@@ -234,26 +249,10 @@
                 </StackPanel>
             </Button>
             <Button Command="{Binding ExitCommand}"
-                    VerticalAlignment="Top"
-                    HorizontalAlignment="Left"
-                    Height="23"
-                    Margin="140,50,0,0"
-                    Width="117">
-                <StackPanel Orientation="Horizontal">
-                    <Image Source="Resources/shutdown.png"
-                           HorizontalAlignment="Left"
-                           Height="16"
-                           Margin="0,0,5,0"
-                           VerticalAlignment="Top"
-                           Width="16" />
-                    <TextBlock Text="Exit" />
-                </StackPanel>
-            </Button>
-            <Button Command="{Binding ExitCommand}"
                 VerticalAlignment="Top"
                 HorizontalAlignment="Left"
                 Height="23"
-                Margin="140,50,0,0"
+                Margin="628,20,0,0"
                 Width="117">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="Resources/shutdown.png"
@@ -269,7 +268,7 @@
                 VerticalAlignment="Top"
                 HorizontalAlignment="Left"
                 Height="23"
-                Margin="262,50,0,0"
+                Margin="506,20,0,0"
                 Width="117">
                 <StackPanel Orientation="Horizontal">
                     <Image Source="music.png"
@@ -284,7 +283,7 @@
         </Grid>
         <StatusBar VerticalAlignment="Bottom"
                    Background="WhiteSmoke"
-                   Grid.Row="3">
+                   Grid.Row="3" Height="22">
             <StatusBarItem>
                 <TextBlock x:Name="txtNotification"
                            Text="{Binding NotificationText}"
